--- a/journal/201808.md
+++ b/journal/201808.md
@@ -44,13 +44,11 @@ Dev activity stats for {MONTH}: {} active PRs, {} master commits, {} added and {
 
 # Network
 
-Hashrate: {}
+Hashrate: went from 54 to 76 PH/s, the low was 50 and the new ATH is 100 PH/s. BeePool share rose to ~50% while F2Pool shrinked to 30%, followed by coinmine.pl at 5% and Luxor at 3%.
 
-Staking: {}
+Staking: 30-day average ticket price is 95.6 DCR (+3.0) as of Aug 3. During the month, ticket price varied between the high and low of 92.2 and 100.5 DCR respectively. Locked DCR held between 3.80 and 3.90 million or 46.3-46.9% of the supply.
 
-Nodes: there are 217 public listening and 281 normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: 2% at 1.4.0(pre) (dev builds), 5% on v1.3.0 (RC1), 62% on v1.2.0 (-5%), 22% on v1.1.2 (-2%), 6% on v1.1.0 (-1%). Almost 69% of nodes are v.1.2.0 and higher and support client filters. Data snapshot of Aug 31.
-
-Some interesting analysis of the ticket system https://twitter.com/ImacallyouJawdy
+Nodes: there are 217 public listening and 281 normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: 2% at v1.4.0(pre) (dev builds), 5% on v1.3.0 (RC1), 62% on v1.2.0 (-5%), 22% on v1.1.2 (-2%), 6% on v1.1.0 (-1%). Almost 69% of nodes are v.1.2.0 and higher and support client filters. Data snapshot of Aug 31.
 
 # ASICs
 
@@ -202,6 +200,8 @@ An unusual event was the chat about double negatives and other oddities in langu
 Aug 14 huge drop everywhere, top 100 cryptos lost ~5-30%, Bitcoin went below 6k and the overall market below 200b, according to cmc. All together with Bitcoin dominance to 53%+. Decred lost ~17% and dropped to 0.0056 BTC and 33 USD.
 
 Around Aug 24, Huobi showed a trading volume $5m+ for DCR.
+
+[@ImacallyouJawdy](https://twitter.com/ImacallyouJawdy) posted some creative analysis based on ticket data. 
 
 # Relevant External
 
