--- a/journal/201808.md
+++ b/journal/201808.md
@@ -44,7 +44,7 @@ Dev activity stats for {MONTH}: {} active PRs, {} master commits, {} added and {
 
 # Network
 
-Hashrate: went from 54 to 76 PH/s, the low was 50 and the new ATH is 100 PH/s. BeePool share rose to ~50% while F2Pool shrinked to 30%, followed by coinmine.pl at 5% and Luxor at 3%.
+Hashrate: went from 54 to 76 PH/s, the low was 50 and the new all-time high is 100 PH/s. BeePool share rose to ~50% while F2Pool shrinked to 30%, followed by coinmine.pl at 5% and Luxor at 3%.
 
 Staking: 30-day average ticket price is 95.6 DCR (+3.0) as of Aug 3. During the month, ticket price varied between the high and low of 92.2 and 100.5 DCR respectively. Locked DCR held between 3.80 and 3.90 million or 46.3-46.9% of the supply.
 
@@ -54,7 +54,7 @@ Nodes: there are 217 public listening and 281 normal nodes per [dcred.eu](https:
 
 Obelisk posted 3 [email updates](https://us16.campaign-archive.com/home/?u=393b2698d17bdfe48ac0422ac&id=87ef82fd96) in August. DCR1 units are [reportedly](https://us16.campaign-archive.com/?u=393b2698d17bdfe48ac0422ac&id=43645f11f8) shipping with 1 TH/s hashrate and will be upgraded with firmware to 1.5 TH/s. Batch 1 customers will receive [compensation](https://us16.campaign-archive.com/?u=393b2698d17bdfe48ac0422ac&id=17e8f9480f) for missed shipment dates, but only after Batch 5 ships. Batch 2-5 customers will be receiving the updated [slim design](https://twitter.com/ObeliskTechHQ/status/1034548178056560641).
 
-Innosilicon [announced](https://twitter.com/Inno_Miner/status/1025189797239771136) the new [D9+ DecredMaster](http://www.innosilicon.com/html/d9+-miner/index.html): 2.8 TH/s at 1,230 W and priced $1,499. Specified shipping date was Aug 10-15.
+Innosilicon [announced](https://twitter.com/Inno_Miner/status/1025189797239771136) the new [D9+ DecredMaster](http://www.innosilicon.com/html/d9+-miner/index.html): 2.8 TH/s at 1,230 W priced $1,499. Specified shipping date was Aug 10-15.
 
 [FFMiner DS19](https://www.asicminervalue.com/miners/ffminer/ds19) claims 3.1 TH/s for Blake256R14 at 680 W and simultaneously 1.55 TH/s for Blake2B at 410 W, the price is [$1,299](https://www.akminer.com/all-products/new-double-mode-dcr-sc-asic-ds19-shipment-20-25th-aug). Shipping Aug 20-25.
 
@@ -62,18 +62,18 @@ Another newly noticed miner offer is [this](https://signatureit.org/products/dec
 
 # Integrations
 
-One more [stakepool](https://decred.org/stakepools/) this month: [www.d1pool.com](https://www.d1pool.com).
+[www.d1pool.com](https://www.d1pool.com) joined the list of [stakepools](https://decred.org/stakepools/) for a total of 16.
 
-Australian CoinTree [listed](https://twitter.com/CointreeAus/status/1032887014029316097) DCR {AUD?}. The fees are 0 during the "Early access mode", more in the [blog](https://www.cointree.com/blog/new-coins-added-zcash-siacoin-steem-lisk-digibyte-and-more). On a related note, CoinTree is [working](https://www.cointree.com/blog/bill-payments-feature-coming-soon) on a feature to pay household bills with cryptocurrencies it supports.
+Australian CoinTree [added](https://twitter.com/CointreeAus/status/1032887014029316097) DCR trading {AUD?}. There are no fees during the "Early access mode", more in their [blog](https://www.cointree.com/blog/new-coins-added-zcash-siacoin-steem-lisk-digibyte-and-more). On a related note, CoinTree is [working](https://www.cointree.com/blog/bill-payments-feature-coming-soon) on a feature to pay household bills with cryptocurrencies it supports.
 
-3 new OTC desks were added to [exchanges](https://decred.org/exchanges/) page at decred.org.
+Three new OTC desks were added to [exchanges](https://decred.org/exchanges/) page at decred.org.
 
-Two mobile wallets integrated Decred in August:
+Two mobile wallets integrated Decred:
 
-* [Coinomi](https://www.coinomi.com/) [added](https://twitter.com/decredproject/status/1034878463323394050) Decred to their Android and iOS wallets. Check their [downloads](https://www.coinomi.com/downloads/) page (direct APK download and checksums are available). Coinomi [features](https://unblock.net/coinomi-wallet-review/) integrated cryptocurrency exchange and is the first company to offer mobile Decred wallet.
+* [Coinomi](https://www.coinomi.com/) [added](https://twitter.com/decredproject/status/1034878463323394050) Decred to their Android and iOS wallets. In addition to common Apple App Store and Google Play you can [download](https://www.coinomi.com/downloads/) the APK directly. Coinomi [features](https://unblock.net/coinomi-wallet-review/) integrated cryptocurrency exchange and is the first company to offer mobile Decred wallet.
 * [BitBill](https://www.bitbill.com/) Android and iOS wallet also [added](https://twitter.com/bitbillwallet/status/1032940076190167040) Decred.
 
-As always: do your best to understand the security and privacy model before using any wallet software.
+Reminder: do your best to understand the security and privacy model before using any wallet software.
 
 # Adoption
 
@@ -116,7 +116,7 @@ For those willing to help with the events:
 
 > BAB: Hey all, we are gearing up for conference season. I have a list of places we hope to attend but need to know who besides @joshuam and @Haon are willing to do public speaking, willing to work booths, or help out at them? You will need to be well versed on not just what is Decred, but the history of Decred etc... DM me if you are interested. ([#event_planning](https://riot.im/app/#/room/!aNPTuiryMFmdMQWUzb:decred.org/$153496620157501qRsIH:decred.org))
 
-{or Marco's call for ambassadors tweet}
+{or Marco's call for ambassadors tweet https://twitter.com/marco_peereboom/status/1034915961185492992 full version https://twitter.com/marco_peereboom/status/1034937859432697861}
 
 # Media
 
@@ -225,7 +225,7 @@ Finally, almost unrelated to Decred but too good to not share: [yetanotherico.co
 
 # About This Issue
 
-This is the {}th issue of Decred Journal. It is mirrored on [GitHub]({}), [Medium]({}) and [Reddit]({}). Past issues are available [here](https://xaur.github.io/decred-news/).
+This is the 5th issue of Decred Journal. It is mirrored on [GitHub]({}), [Medium]({}) and [Reddit]({}). Past issues are available [here](https://xaur.github.io/decred-news/).
 
 Most information from third parties is relayed directly from source after a minimal sanity check. The authors of Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
 
