--- a/journal/201808.md
+++ b/journal/201808.md
@@ -94,26 +94,22 @@ Attended:
 
 * @joshuam discussed Decred and decentralized organizations with [Craig Laundy](https://twitter.com/LaundyCraigMP), Federal Minister for Small Business, the Workplace, and Deregulation with the Australian Government, at @YBFVentures. ([photos](https://twitter.com/joshuam_/status/1024849914163916801))
 * [Meetup](https://www.meetup.com/Social-at-The-Block-Cafe/events/253103196/) at [@TheBlockCafe](https://twitter.com/TheBlockCafe) in Lisbon, Portugal. @mm presented "Decred 101 - Governance with Skin in the Game" and @moo31337 talked about Decred's 2018 roadmap. (photos: [1](https://twitter.com/DeCredBAB/status/1025087786276270081) [2](https://twitter.com/marco_peereboom/status/1025088183523008512) [3](https://twitter.com/DeCredBAB/status/1025148454455140354))
-* [Meetup](https://alysida.kktix.cc/events/b-c-meetup) in Taipei, Taiwan. @morphymore made a short intro of Decred and noted "After the talk, many have approached to tell me that they literally don’t hear of Decred until today, and are interested in finding out more about the merit of a hybrid consensus system.". Longer report [here](https://riot.im/app/#/room/!aNPTuiryMFmdMQWUzb:decred.org/$153360544050359hybnz:decred.org), some photos and video are [here](https://photos.app.goo.gl/znay3MRCAjBY19QQ8).
+* [Meetup](https://alysida.kktix.cc/events/b-c-meetup) in Taipei, Taiwan. @morphymore made a short intro of Decred and noted: "After the talk, many have approached to tell me that they literally don’t hear of Decred until today, and are interested in finding out more about the merit of a hybrid consensus system.". Longer report [here](https://riot.im/app/#/room/!aNPTuiryMFmdMQWUzb:decred.org/$153360544050359hybnz:decred.org), some photos and a video are [here](https://photos.app.goo.gl/znay3MRCAjBY19QQ8).
 * @eSizeDave introduced Decred to the SILC Undergraduate Program students at @YBFVentures. ([photo](https://twitter.com/ybfventures/status/1026625236605648896))
 * [OKEx Global Meetup Tour](https://www.eventbrite.hk/e/okex-global-meetup-tour-2018-vietnam-tickets-48107057504) in Ho Chi Minh City, Vietnam. @joshuam gave a brief presentation covering the history of Decred, how the project functions, and the importance of governance. Afterwards he joined a panel discussion and spoke about Decred's incentives for long term viability. ([video](https://www.pscp.tv/w/bjwUMTFlUkV4RHJlbVZ2RXd8MXlvSk1WcW93bFJ4Ub3nChi87d8sJHHV34WUH6j4YPs5gPEkfQ_l47RZfdny), [video](https://twitter.com/okex_/status/1027507652291584000), [photo](https://twitter.com/okex_/status/1027549269685821442))
 * [Blockchain & Decentralised Governance Panel](https://www.meetup.com/Blockchain-for-Social-Impact-Melbourne-BSIMelb/events/253050277/) at @YBFVentures in Melbourne, Australia. @eSizeDave presented Decred, mini-report [here](https://riot.im/app/#/room/!aNPTuiryMFmdMQWUzb:decred.org/$153416249853777aAeVg:decred.org). (photos: [1](https://twitter.com/davesaddress/status/1028981542343700480) [2](https://twitter.com/rosathethompson/status/1028946211670188032))
 * [Blockchain Futurist Conference](https://futuristconference.com/) in Toronto, Canada. @zubairzia0 noted: "Devs and the community were held in high regard for the people who knew about decred ... one positive thing I remember was someone defending us saying 'Decred does not need a booth', I believe that comment was reflective of the quality of projects being showcased at the conference.". ([photo](https://twitter.com/KennethBosak/status/1029783885465497601))
 * Meetup at @YBFVentures in Melbourne, Australia. @joshuam discussed Decred with [Graham Stuart](https://twitter.com/grahamstuart), U.K. Minister for International Trade. ([news](http://www.decred.com.au/news/uk-investment-minister-gets-acquainted-with-decred-in-australia), [photos](https://twitter.com/joshuam_/status/1031413840133611520))
-* Small meetup with Jackson Palmer in Melbourne, Australia. ([photo](https://twitter.com/ummjackson/status/1031475035385393152)
+* Small meetup with Jackson Palmer in Melbourne, Australia. ([photo](https://twitter.com/ummjackson/status/1031475035385393152))
 * [Voice of Blockchain](https://chicagoblockchainproject.com/voice-of-blockchain/) in Chicago, USA. @moo31337 talked on Protocol Governance panel, Solving Scalability panel ([video](https://www.youtube.com/watch?v=ns47cVozqQA)) and gave [an interview](https://www.youtube.com/watch?v=NpdNgSCK86c), while @ay-p spoke on Decentralized Exchanges panel. Stakey made an [appearance](https://twitter.com/dcrstakey/status/1034859890441895937) on the slides. (photos: [1](https://twitter.com/BlockchainVoice/status/1033119483378970624) [2](https://twitter.com/marco_peereboom/status/1033365545146621952) [3](https://twitter.com/Pinkcoin_/status/1033076329204404230) [4](https://twitter.com/marco_peereboom/status/1033105587167526912) [5](https://twitter.com/marco_peereboom/status/1033055753341489153))
 * Hawthorne Street Fair in Portland, USA. Raedah Group was out answering questions about crypto and Decred. ([photos](https://twitter.com/raedahgroup/status/1034574986680315904))
 * [Blockchain APAC](https://www.blockchainapac.com.au/) in Melbourne, Australia. @joshuam joined a panel discussion with reps from banking, university and ISO/TC 307. @eSizeDave [reports](https://riot.im/app/#/room/!kdpEDksmOMNrlMqffD:decred.org/$15355398751628XJBkP:decred.org): "This enterprise conference was indeed a whole lot better than I expected. The presentations were actually full of very worthwhile information from credible people, articulated aptly to a very government, academic, and corporate crowd, who genuinely took on board valuable insights. Good to know some of these key people are Decred holders and stakers as well. I got to use the entire day to speak directly with some of the most pivotal personalities in this particular populace. Ongoing relationships have been built and strengthened.". (photos: [1](https://twitter.com/davesaddress/status/1034748616294903808) [2](https://twitter.com/davesaddress/status/1034744820827410432) [3](https://twitter.com/joshuam_/status/1034770318391296002))
-
-Upcoming:
-
-* {}
 
 For those willing to help with the events:
 
 > BAB: Hey all, we are gearing up for conference season. I have a list of places we hope to attend but need to know who besides @joshuam and @Haon are willing to do public speaking, willing to work booths, or help out at them? You will need to be well versed on not just what is Decred, but the history of Decred etc... DM me if you are interested. ([#event_planning](https://riot.im/app/#/room/!aNPTuiryMFmdMQWUzb:decred.org/$153496620157501qRsIH:decred.org))
 
-{or Marco's call for ambassadors tweet https://twitter.com/marco_peereboom/status/1034915961185492992 full version https://twitter.com/marco_peereboom/status/1034937859432697861}
+> The Decred project is looking for ambassadors. If you are looking for a fun cryptocurrency to get involved in send me a DM or come talk to me on Decred slack. ([@marco_peereboom](https://twitter.com/marco_peereboom/status/1034915961185492992), longer version [here](https://twitter.com/marco_peereboom/status/1034937859432697861))
 
 # Media
 
