--- a/journal/201808.md
+++ b/journal/201808.md
@@ -64,7 +64,7 @@ Another newly noticed miner offer is [this](https://signatureit.org/products/dec
 
 [www.d1pool.com](https://www.d1pool.com) joined the list of [stakepools](https://decred.org/stakepools/) for a total of 16.
 
-Australian [CoinTree](https://www.cointree.com/) [added](https://twitter.com/CointreeAus/status/1032887014029316097) DCR trading to BTC and AUD. There are no fees during the "Early access mode", more in their [blog](https://www.cointree.com/blog/new-coins-added-zcash-siacoin-steem-lisk-digibyte-and-more). On a related note, CoinTree is [working](https://www.cointree.com/blog/bill-payments-feature-coming-soon) on a feature to pay household bills with cryptocurrencies it supports.
+Australian [CoinTree](https://www.cointree.com/) [added](https://twitter.com/CointreeAus/status/1032887014029316097) DCR trading. The platform supports fiat, there are some [limitations](https://riot.im/app/#/room/!OfChXgczrIlpEZSFAv:decred.org/$15360557776482RfMJg:decred.org) during the upgrade to a new system but also [no fees](https://www.cointree.com/blog/new-coins-added-zcash-siacoin-steem-lisk-digibyte-and-more) in the "Early access mode". On a related note, CoinTree is [working](https://www.cointree.com/blog/bill-payments-feature-coming-soon) on a feature to pay household bills with cryptocurrencies it supports.
 
 Three new OTC desks were added to [exchanges](https://decred.org/exchanges/) page at decred.org.
 
