--- a/journal/201808.md
+++ b/journal/201808.md
@@ -113,18 +113,20 @@ For those willing to help with the events:
 
 # Media
 
-DA 21 https://twitter.com/decredproject/status/1026546648103628800
+Decred Assembly episode 21 is [available](https://www.youtube.com/watch?v=hJ2IKjdB6n4). @jy-p and lead dcrwallet developer @jrick discussed SPV from Satoshi's whitepaper, how it can be improved upon and what's coming in Decred.
 
-https://stakey.club/en/decrediton-setup/
+Decred Assembly episodes 1-21 are available in audio only format [here](https://www.reddit.com/r/decred/comments/9999nq/decred_assembly_ep_121_audio_only_mp3/).
+
+New instructional articles on [stakey.club](https://stakey.club/): [Decrediton setup](https://stakey.club/en/decrediton-setup/), [Deleting the wallet](https://stakey.club/en/deleting-the-wallet/), [Installing Go](https://stakey.club/en/installing-go/), [Installing dcrd](https://stakey.club/en/installing-dcrd/), [dcrd as a Linux service](https://stakey.club/en/dcrd-as-a-linux-service/). Available in both English and [Portuguese](https://stakey.club/pt/articles/).
 
 Decred scored \#32 in the [August issue](https://archive.today/W3cOd) of CCID ratings. The evaluation model was explained in [this interview](https://medium.com/@coinness/coinness-exclusive-interview-with-pu-songtao-discover-ccid-global-public-chain-tech-evaluation-d570af55fd89).
 
-Satis Group rated Decred highly in their cryptoasset valuation [research report](https://www.cryptoglobe.com/latest/2018/08/satis-research-upside-5-year-in-btc-96000-xmr-18000-and-dcr-535-downside-in-bch-268/) ([PDF](https://research.bloomberg.com/pub/res/d37g1yWebn9LbRbS09rquSuSoDQ)). The story made it to several large media, but some did not link or [omitted](https://www.reddit.com/r/decred/comments/9c4hp8/forbes_online_contributor_might_do_a_write_on/e5bb5n3/) Decred entirely [citing](https://twitter.com/AaronWStanley/status/1035742979619794945) low market cap.
+Satis Group rated Decred highly in their cryptoasset valuation [research report](https://www.cryptoglobe.com/latest/2018/08/satis-research-upside-5-year-in-btc-96000-xmr-18000-and-dcr-535-downside-in-bch-268/) ([PDF](https://research.bloomberg.com/pub/res/d37g1yWebn9LbRbS09rquSuSoDQ)). The story made it to several large media, but some did not link or [omitted](https://www.reddit.com/r/decred/comments/9c4hp8/forbes_online_contributor_might_do_a_write_on/e5bb5n3/) Decred entirely, [citing](https://twitter.com/AaronWStanley/status/1035742979619794945) low market cap.
 
-Featured:
+Featured articles:
 
-* https://medium.com/decred/decred-investor-interviews-ciarán-oleary-general-partner-blueyard-capital-592a23ec53f2
-* https://medium.com/crypto-oracle/is-decred-worth-my-time-and-money-20e2a46164bb
+* Decred Investor Interviews: Ciarán O’Leary, General Partner, BlueYard Capital ([medium](https://medium.com/decred/decred-investor-interviews-ciarán-oleary-general-partner-blueyard-capital-592a23ec53f2))
+* Is Decred worth my time and money? by Fabien Pelissier ([medium](https://medium.com/crypto-oracle/is-decred-worth-my-time-and-money-20e2a46164bb)) - an article accompanying a 13-page Decred Analysis ([PDF](http://www.canalcrypto.com/reports/decred_analysis.pdf))
 
 Articles:
 
@@ -142,9 +144,9 @@ Articles:
 
 Videos:
 
-* https://decentralized.tv/top-3-coins-crushing-it-in-2018-so-far-decred-vechain-binance-coin/ http://youtube.com/watch?v=NwY6K9om37I
-* Decred review - The Ultimate Money Guide https://www.youtube.com/watch?v=qb9amC_Wch0
-* {bitboy crypto vid https://www.youtube.com/watch?v=op6d08Yve54}
+* Top 3 Coins Crushing it in 2018 so Far! - Decred, VeChain, Binance Coin! by Decentralized TV ([youtube](http://youtube.com/watch?v=NwY6K9om37I))
+* Decred review by Ultimate Money ([youtube](https://www.youtube.com/watch?v=qb9amC_Wch0), missed in July issue)
+* Interview with Marco Peereboom by BitBoy Crypto ([youtube](https://www.youtube.com/watch?v=op6d08Yve54))
 
 # Community Discussions
 
@@ -176,7 +178,7 @@ Highlights:
 * A [thread](https://www.reddit.com/r/decred/comments/95r578/proposed_changes_to_decred_jargon/) was started to discuss changes to Decred jargon with the intent to make it more consistent and accessible to newcomers. The question whether changing terminology on the website and the docs deserves a Politeia vote was touched in [#documentation](https://riot.im/app/#/room/!tfqymymiNgzSUJTHqS:decred.org/$1535386492135ZGULG:decred.org).
 * Project fund transparency and constitution were extensively discussed on [Reddit](https://www.reddit.com/r/decred/comments/96j9ai/transparency_in_payments_made_with_the_community/) and in [#general](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153410896753432nExMw:decred.org).
 
-Reddit and Forum: Decred [cons](https://www.reddit.com/r/decred/comments/94ivq5/decred_cons/).
+Reddit and Forum: Decred [cons](https://www.reddit.com/r/decred/comments/94ivq5/decred_cons/). {more}
 
 Chats: cross-chain [trading](https://riot.im/app/#/room/!MfifnUCLrfSeRkMDwZ:decred.org/$153315325947965TiRLy:decred.org) via LN; [plans](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153317267348142YycAs:decred.org) for contractor management system, lower-level decision making and contractor privacy vs transparency for stakeholders; [measuring](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153322272548457woVQD:decred.org) dev activity; [what if](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153323194548585HHCQS:decred.org) the network stalls, multiple implementations of Decred for more resilience, long term vision behind those extensive tests and accurate comments in the codebase; [ideas](https://riot.im/app/#/room/!tIDEIWechmqCLjPiui:decred.org/$153327969148851WDEWg:decred.org) for process for policy documents, hosting them in Pi and approving with ticket voting; [about](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$1533582725405DqzDt:zettaport.com) SPV wallet disk size, how compact filters work; [odds](https://riot.im/app/#/room/!NKtIRqGOEGaZvSQkKl:decred.org/$153378940451742eumld:decred.org) of a wallet to fetch a wrong block in SPV; new [module system](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153385446352375nNCzg:decred.org) in Go; [security](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153394851052869tucYe:decred.org) of allowing Android app backups; [why](https://riot.im/app/#/room/!NNzHoaSdnsbZDQOXJr:decred.org/$153409911653370oCvhJ:decred.org) PoW algo change proposal must be specified in great detail; [thoughts](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153432628255090APtWJ:decred.org) about [NIPoPoWs](https://eprint.iacr.org/2017/963) and SPV; [prerequisites](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153433879355141udYDe:decred.org) for shipping SPV by default ([continued](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$15356464972893wubQn:decred.org)); Decred vs Dash treasury and marketing [expenses](https://riot.im/app/#/room/!zxBsqZRxjbQoLqJRwe:decred.org/$153434282455193CVEFR:decred.org), spending other people's money; [why](https://riot.im/app/#/room/!NKtIRqGOEGaZvSQkKl:decred.org/$153453353055716yshds:decred.org) Decred should not invade a country, DAO and nation states, entangling with nation state is poor resource allocation; [how](https://riot.im/app/#/room/!wSdymYrEpBhsWlDJuk:decred.org/$153458242155930Qncyb:decred.org) winning tickets are determined and attack vectors; [Politeia](https://riot.im/app/#/room/!tIDEIWechmqCLjPiui:decred.org/$153455653755840KhCTV:decred.org) proposal moderation, contractor clearance, the scale of proposals and decision delegation, initial Politeia vote to approve Politeia itself; [chat systems](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153478648556684iKADS:decred.org), Matrix/Slack/Discord/RocketChat/Keybase ([continued](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$1535216745397gPsON:zettaport.com)); [overview](https://riot.im/app/#/room/!OfChXgczrIlpEZSFAv:decred.org/$153490307657191zOrLq:decred.org) of Korean exchanges; no [breaking changes](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153496073957423GaxvC:decred.org) in vgo; [why](https://riot.im/app/#/room/!VFRvyndKpzcLrVslQD:decred.org/$153496964357581puIAD:decred.org) project fund burn rate must keep low; [asymptotic](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153520054958429Jqwut:decred.org) behavior of Decred and other ccs, tail emission; count of [full nodes](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153529715258849rjuSm:decred.org) and incentives to run them; Politeia proposal [translations](https://riot.im/app/#/room/!VFRvyndKpzcLrVslQD:decred.org/$153535615958948fQNVf:decred.org) and multilingual environment.
 
