Aug18: additions and fixes

--- a/journal/201808.md
+++ b/journal/201808.md
@@ -1,6 +1,6 @@
 # {DRAFT} Decred Journal – August 2018 {DRAFT}
 
-![{alt text}](../img/{file.jpg} "{hover text}")
+![Marco at Voice of Blockchain](../img/blockchainvoice-300.jpg "Marco at Voice of Blockchain")
 
 # Development
 
@@ -34,11 +34,13 @@ The upcoming v3.0 entered beta and is deployed on [beta.dcrdata.org](https://bet
 
 [iOS](https://github.com/raedahgroup/dcrios): backend is mostly complete, as well as the front end. Support for devices with smaller screens was improved. What works now: creating and recovering wallets, listing of transactions, receiving DCR, displaying and scanning QR codes, browsing account information, SPV connection to peers, downloading headers. Some bugs need fixing before making testable builds.
 
+[Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): v0.6.0 beta [released](https://github.com/matheusd/dcr-split-ticket-matcher/releases/tag/v0.6.0) with improved fee calculation and multiple bug fixes.
+
 [docs](https://github.com/decred/dcrdocs): [introduced](https://www.reddit.com/r/decred/comments/9807gs/new_governance_section_and_politeia_page_on/) new [Governance](https://docs.decred.org/governance/governance/) section that grouped some old articles as well as the new [Politeia](https://docs.decred.org/governance/politeia/) page.
 
 @Richard-Red created a [concept repository](https://github.com/RichardRed0x/governance-docs) with policy documents that should only be changed with voter approval.
 
-[decred.org](https://github.com/decred/dcrweb): [Contributors](https://decred.org/contributors/) was updated. Advisors were removed, see reasoning [here](https://github.com/decred/dcrweb/issues/316).
+[decred.org](https://github.com/decred/dcrweb): 8 [contributors](https://decred.org/contributors/) added and 4 removed, including 2 advisors (discussion [here](https://github.com/decred/dcrweb/issues/316)).
 
 [decredmarketcap.com](https://decredmarketcap.com/) is a brand new website that shows the most accurate DCR market data. Clean design, mobile friendly, no javascript required.
 
@@ -60,7 +62,7 @@ Innosilicon [announced](https://twitter.com/Inno_Miner/status/102518979723977113
 
 [FFMiner DS19](https://www.asicminervalue.com/miners/ffminer/ds19) claims 3.1 TH/s for Blake256R14 at 680 W and simultaneously 1.55 TH/s for Blake2B at 410 W, the price is [$1,299](https://www.akminer.com/all-products/new-double-mode-dcr-sc-asic-ds19-shipment-20-25th-aug). Shipping Aug 20-25.
 
-Another newly noticed miner offer is [this](https://signatureit.org/products/decred-dcr-blake256r14-asic-46th-s-2200w-estimated-roi-6-months-30-day-after-electricity) unit that does 46 TH/s at 2,150 W at the price of $4,720. It is shipping Nov 2018 and the stats look very close to [Pangolin Whatsminer DCR](https://pangolinminer.com/product/whatsminer-dcr/).
+Another newly noticed miner offer is [this](https://signatureit.org/products/decred-dcr-blake256r14-asic-46th-s-2200w-estimated-roi-6-months-30-day-after-electricity) unit that does 46 TH/s at 2,150 W at the price of $4,720. It is shipping Nov 2018 and the stats look very close to [Pangolin Whatsminer DCR](https://pangolinminer.com/product/whatsminer-dcr/) (which has now a page on [asicminervalue](https://www.asicminervalue.com/miners/pangolin/whatsminer-dcr)).
 
 # Integrations
 
@@ -130,6 +132,7 @@ Featured articles:
 * Decred Investor Interviews: Ciarán O’Leary, General Partner, BlueYard Capital ([medium](https://medium.com/decred/decred-investor-interviews-ciarán-oleary-general-partner-blueyard-capital-592a23ec53f2))
 * Decred Update Research Report by Node Blockchain ([medium](https://medium.com/nodeblockchain/decred-dcr-update-research-report-83f14577ff25)), and the corresponding full 11-page report ([Google Drive](https://drive.google.com/file/d/1lilqg6m1CT4LIbgzuEV9QnJTJ8zVSzC0/view))
 * Is Decred worth my time and money? by Fabien Pelissier ([medium](https://medium.com/crypto-oracle/is-decred-worth-my-time-and-money-20e2a46164bb)), and the full 13-page Decred Analysis ([PDF](http://www.canalcrypto.com/reports/decred_analysis.pdf))
+* Decred for Custody Providers by @bee ([medium](https://medium.com/decred/decred-for-custody-providers-57451f6e53e2))
 
 Articles:
 
@@ -177,10 +180,11 @@ Comm systems news:
 
 Highlights:
 
-* A [thread](https://www.reddit.com/r/decred/comments/95r578/proposed_changes_to_decred_jargon/) was started to discuss changes to Decred jargon with the intent to make it more consistent and accessible to newcomers. The question whether changing terminology on the website and the docs deserves a Politeia vote was touched in [#documentation](https://riot.im/app/#/room/!tfqymymiNgzSUJTHqS:decred.org/$1535386492135ZGULG:decred.org).
+* A [thread](https://www.reddit.com/r/decred/comments/95r578/proposed_changes_to_decred_jargon/) was started to discuss changes to Decred jargon with the intent to make it more consistent and accessible to newcomers. The question whether changing "official" terminology requires stakeholder approval was touched in [this thread](https://www.reddit.com/r/decred/comments/9807gs/new_governance_section_and_politeia_page_on/) and in [#documentation](https://riot.im/app/#/room/!tfqymymiNgzSUJTHqS:decred.org/$1535386492135ZGULG:decred.org).
 * Project fund transparency and constitution were extensively discussed on [Reddit](https://www.reddit.com/r/decred/comments/96j9ai/transparency_in_payments_made_with_the_community/) and in [#general](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153410896753432nExMw:decred.org).
+* [Pre-proposal](https://www.reddit.com/r/decred/comments/98lgwt/preproposal_the_first_politeia_proposalvote/) to use Politeia to approve Politeia as a legitimate decision-making tool for Decred.
 
-Reddit and Forum: Decred [cons](https://www.reddit.com/r/decred/comments/94ivq5/decred_cons/). {more}
+Reddit: substantive discussion about [Decred cons](https://www.reddit.com/r/decred/comments/94ivq5/decred_cons/); ecosystem [fund](https://www.reddit.com/r/decred/comments/953nwz/decred_ecosystem_fund_question/); a [thread](https://www.reddit.com/r/decred/comments/98fywg/decreds_politeia_and_amazing_autonomous_governance/) about voter engagement, Politeia UX and trolling; [idea](https://www.reddit.com/r/decred/comments/99jmoq/dcrsocial_a_plus_social_media_for_decred_project/) of a social media system for Decred by @michae2xl; [how profitable](https://www.reddit.com/r/decred/comments/9alvyz/is_it_even_worth_purchasing_the_dcr1_to_mine/) is the Obelisk DCR1.
 
 Chats: cross-chain [trading](https://riot.im/app/#/room/!MfifnUCLrfSeRkMDwZ:decred.org/$153315325947965TiRLy:decred.org) via LN; [plans](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153317267348142YycAs:decred.org) for contractor management system, lower-level decision making and contractor privacy vs transparency for stakeholders; [measuring](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153322272548457woVQD:decred.org) dev activity; [what if](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153323194548585HHCQS:decred.org) the network stalls, multiple implementations of Decred for more resilience, long term vision behind those extensive tests and accurate comments in the codebase; [ideas](https://riot.im/app/#/room/!tIDEIWechmqCLjPiui:decred.org/$153327969148851WDEWg:decred.org) for process for policy documents, hosting them in Pi and approving with ticket voting; [about](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$1533582725405DqzDt:zettaport.com) SPV wallet disk size, how compact filters work; [odds](https://riot.im/app/#/room/!NKtIRqGOEGaZvSQkKl:decred.org/$153378940451742eumld:decred.org) of a wallet to fetch a wrong block in SPV; new [module system](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153385446352375nNCzg:decred.org) in Go; [security](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153394851052869tucYe:decred.org) of allowing Android app backups; [why](https://riot.im/app/#/room/!NNzHoaSdnsbZDQOXJr:decred.org/$153409911653370oCvhJ:decred.org) PoW algo change proposal must be specified in great detail; [thoughts](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153432628255090APtWJ:decred.org) about [NIPoPoWs](https://eprint.iacr.org/2017/963) and SPV; [prerequisites](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153433879355141udYDe:decred.org) for shipping SPV by default ([continued](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$15356464972893wubQn:decred.org)); Decred vs Dash treasury and marketing [expenses](https://riot.im/app/#/room/!zxBsqZRxjbQoLqJRwe:decred.org/$153434282455193CVEFR:decred.org), spending other people's money; [why](https://riot.im/app/#/room/!NKtIRqGOEGaZvSQkKl:decred.org/$153453353055716yshds:decred.org) Decred should not invade a country, DAO and nation states, entangling with nation state is poor resource allocation; [how](https://riot.im/app/#/room/!wSdymYrEpBhsWlDJuk:decred.org/$153458242155930Qncyb:decred.org) winning tickets are determined and attack vectors; [Politeia](https://riot.im/app/#/room/!tIDEIWechmqCLjPiui:decred.org/$153455653755840KhCTV:decred.org) proposal moderation, contractor clearance, the scale of proposals and decision delegation, initial Politeia vote to approve Politeia itself; [chat systems](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153478648556684iKADS:decred.org), Matrix/Slack/Discord/RocketChat/Keybase ([continued](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$1535216745397gPsON:zettaport.com)); [overview](https://riot.im/app/#/room/!OfChXgczrIlpEZSFAv:decred.org/$153490307657191zOrLq:decred.org) of Korean exchanges; no [breaking changes](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153496073957423GaxvC:decred.org) in vgo; [why](https://riot.im/app/#/room/!VFRvyndKpzcLrVslQD:decred.org/$153496964357581puIAD:decred.org) project fund burn rate must keep low; [asymptotic](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153520054958429Jqwut:decred.org) behavior of Decred and other ccs, tail emission; count of [full nodes](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153529715258849rjuSm:decred.org) and incentives to run them; Politeia proposal [translations](https://riot.im/app/#/room/!VFRvyndKpzcLrVslQD:decred.org/$153535615958948fQNVf:decred.org) and multilingual environment.
 
@@ -188,35 +192,25 @@ An unusual event was the chat about double negatives and other oddities in langu
 
 # Markets
 
-{markets overview: USD and BTC prices, highs and lows, interesting events}
-
-Aug 14 huge drop everywhere, top 100 cryptos lost ~5-30%, Bitcoin went below 6k and the overall market below 200b, according to cmc. All together with Bitcoin dominance to 53%+. Decred lost ~17% and dropped to 0.0056 BTC and 33 USD.
-
-Around Aug 24, Huobi showed a trading volume $5m+ for DCR.
+DCR started the month at USD 56 / BTC 0.0073 and had a two week decline. On Aug 14 the whole market took a [huge drop](https://archive.today/K5buy) and briefly went below USD 200B. Bitcoin went below USD 6,000 and top 100 cryptos lost 5-30%. The lowest point coincided with Bitcoin dominance peak at 54.5%. On that day Decred dived -17% and reached the bottom of USD 32 / BTC 0.00537. Since then it went sidelines in the USD 35-45 / BTC 0.0054-0.0064 range. Around Aug 24, Huobi showed DCR trading volume above USD 5M and this coincided with a minor recovery.
 
 [@ImacallyouJawdy](https://twitter.com/ImacallyouJawdy) posted some creative analysis based on ticket data. 
 
 # Relevant External
 
-{PoW and ASIC resistance news}
-
-{governance-related news not mentioned in Community Discussions}
-
-{related exchanges and websites news}
-
-Reddit [was hacked](https://www.wired.com/story/reddit-hacked-thanks-to-woefully-insecure-two-factor-setup/) by intercepting 2FA codes sent via SMS. The [announcement](https://www.reddit.com/r/announcements/comments/93qnm5/we_had_a_security_incident_heres_what_you_need_to/) explains the impact. Yet another [data breach](https://en.wikipedia.org/wiki/List_of_data_breaches) suggests to think twice before sharing any data with any company and shift to more secure authentication systems.
+StopAndDecrypt [published](https://hackernoon.com/asic-resistance-is-nothing-but-a-blockchain-buzzword-b91d3d770366) an extensive article "ASIC Resistance is Nothing but a Blockchain Buzzword" that is much in line with Decred's stance on ASICs.
 
 The ongoing [debates](https://www.reddit.com/r/siacoin/comments/990ga9/siacoin_obelisk_fork_is_no_better_than_ethereum/) about the possible Sia [fork](https://www.reddit.com/r/siacoin/comments/94ji0q/a_community_proposal_to_resolve_the_obelisk/) yet again demonstrate the importance of a robust dispute resolution mechanism. Also, we are [lucky](https://www.reddit.com/r/siacoin/comments/956k6g/community_fork_proposal_detail_discussion_dev_fee/) to have the treasury.
 
-{ASIC resistance buzzword article by stopanddecrypt}
+Mark B Lundeberg, who [found](https://github.com/decred/atomicswap/issues/58) a vulnerability in atomicswap earlier, [published](https://www.reddit.com/r/btc/comments/8yp6gd/my_newest_a_way_to_perform_p2p_atomic_swaps/) a concept of more private peer-to-peer atomic swaps. (missed in July issue)
 
-Vietnam ban mining equipment import https://icobrothers.media/2018/08/14/vietnamese-authorities-have-officially-banned-mining-equipment-import/
+Medium took a [cautious stance](https://help.medium.com/hc/en-us/articles/360000646167-Cryptocurrencies-on-Medium) on cryptocurrencies and triggered at least one project to [migrate](https://blog.aragon.org/aragon-against-censorship-goodbye-medium-hello-ghost/) to Ghost (that same project previously [migrated](https://blog.aragon.org/announcing-our-migration-to-an-open-source-messaging-platform-420b25e74284/) away from Slack).
 
-Medium cc policy https://help.medium.com/hc/en-us/articles/360000646167-Cryptocurrencies-on-Medium triggering one cc project to migrate to ghost https://blog.aragon.org/aragon-against-censorship-goodbye-medium-hello-ghost/
+Regulation: Vietnam [bans](https://icobrothers.media/2018/08/14/vietnamese-authorities-have-officially-banned-mining-equipment-import/) mining equipment import, China [halts](https://www.asiacryptotoday.com/china-halts-hosting-of-crypto-events-in-beijing-bans-crypto-news-accounts-on-wechat/) crypto events and tightens control of crypto chat groups.
 
-Intel and x86 dumpsterfire [keeps burning](https://marc.info/?l=openbsd-tech&m=153504937925732&w=2) brighter. Seek for more secure hardware and operating systems for your coins.
+Reddit [was hacked](https://www.wired.com/story/reddit-hacked-thanks-to-woefully-insecure-two-factor-setup/) by intercepting 2FA codes sent via SMS. The [announcement](https://www.reddit.com/r/announcements/comments/93qnm5/we_had_a_security_incident_heres_what_you_need_to/) explains the impact. Yet another [data breach](https://en.wikipedia.org/wiki/List_of_data_breaches) suggests to think twice before sharing any data with any company and shift to more secure authentication systems.
 
-https://www.reddit.com/r/btc/comments/8yp6gd/my_newest_a_way_to_perform_p2p_atomic_swaps/ (missed in July issue).
+Intel and x86 dumpsterfire keeps [burning brighter](https://marc.info/?l=openbsd-tech&m=153504937925732&w=2). Seek for more secure hardware and operating systems for your coins.
 
 Finally, almost unrelated to Decred but too good to not share: [yetanotherico.com](http://yetanotherico.com/).
 
@@ -228,6 +222,6 @@ Most information from third parties is relayed directly from source after a mini
 
 Feedback is appreciated: please comment on [Reddit]({}), [GitHub](https://github.com/xaur/decred-news/issues) or [#writers_room](https://decred.slack.com/messages/C9HC2NVTM/).
 
-Contributions are also welcome: some areas are adding content, pre-release review or translations to other languages. Check out the {Richard's guide how to contribute to Decred using GitHub without writing code}
+Contributions are welcome too. Some areas are collecting content, pre-release review or translations to other languages. Check out @Richard-Red's [guide](https://medium.com/@richardred/introduction-to-github-for-non-coders-f5614edd64c0) how to contribute to Decred using GitHub without writing code.
 
 Credits (Slack names, alphabetical order): {}, {} and {}.
