--- a/journal/201808.md
+++ b/journal/201808.md
@@ -60,7 +60,7 @@ Innosilicon [announced](https://twitter.com/Inno_Miner/status/102518979723977113
 
 [FFMiner DS19](https://www.asicminervalue.com/miners/ffminer/ds19) claims 3.1 TH/s for Blake256R14 at 680 W and simultaneously 1.55 TH/s for Blake2B at 410 W, the price is [$1,299](https://www.akminer.com/all-products/new-double-mode-dcr-sc-asic-ds19-shipment-20-25th-aug). Shipping Aug 20-25.
 
-Another newly noticed miner offer is [this](https://signatureit.org/products/decred-dcr-blake256r14-asic-46th-s-2200w-estimated-roi-6-months-30-day-after-electricity) unit that does 46 TH/s at 2,150 W at the price of $4,720. It is shipping Nov 2018 and the stats look very close to [Pangolin Whatsminer DCR](https://pangolinminer.com/product/whatsminer-dcr/).
+Another newly noticed miner offer is [this](https://signatureit.org/products/decred-dcr-blake256r14-asic-46th-s-2200w-estimated-roi-6-months-30-day-after-electricity) unit that does 46 TH/s at 2,150 W at the price of $4,720. It is shipping Nov 2018 and the stats look very close to [Pangolin Whatsminer DCR](https://pangolinminer.com/product/whatsminer-dcr/) (which has now a page on [asicminervalue](https://www.asicminervalue.com/miners/pangolin/whatsminer-dcr)).
 
 # Integrations
 
