--- a/journal/201808.md
+++ b/journal/201808.md
@@ -34,6 +34,8 @@ The upcoming v3.0 entered beta and is deployed on [beta.dcrdata.org](https://bet
 
 [iOS](https://github.com/raedahgroup/dcrios): backend is mostly complete, as well as the front end. Support for devices with smaller screens was improved. What works now: creating and recovering wallets, listing of transactions, receiving DCR, displaying and scanning QR codes, browsing account information, SPV connection to peers, downloading headers. Some bugs need fixing before making testable builds.
 
+[Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): v0.6.0 beta [released](https://github.com/matheusd/dcr-split-ticket-matcher/releases/tag/v0.6.0) with improved fee calculation and multiple bug fixes.
+
 [docs](https://github.com/decred/dcrdocs): [introduced](https://www.reddit.com/r/decred/comments/9807gs/new_governance_section_and_politeia_page_on/) new [Governance](https://docs.decred.org/governance/governance/) section that grouped some old articles as well as the new [Politeia](https://docs.decred.org/governance/politeia/) page.
 
 @Richard-Red created a [concept repository](https://github.com/RichardRed0x/governance-docs) with policy documents that should only be changed with voter approval.
@@ -130,6 +132,7 @@ Featured articles:
 * Decred Investor Interviews: Ciarán O’Leary, General Partner, BlueYard Capital ([medium](https://medium.com/decred/decred-investor-interviews-ciarán-oleary-general-partner-blueyard-capital-592a23ec53f2))
 * Decred Update Research Report by Node Blockchain ([medium](https://medium.com/nodeblockchain/decred-dcr-update-research-report-83f14577ff25)), and the corresponding full 11-page report ([Google Drive](https://drive.google.com/file/d/1lilqg6m1CT4LIbgzuEV9QnJTJ8zVSzC0/view))
 * Is Decred worth my time and money? by Fabien Pelissier ([medium](https://medium.com/crypto-oracle/is-decred-worth-my-time-and-money-20e2a46164bb)), and the full 13-page Decred Analysis ([PDF](http://www.canalcrypto.com/reports/decred_analysis.pdf))
+* Decred for Custody Providers by @bee ([medium](https://medium.com/decred/decred-for-custody-providers-57451f6e53e2))
 
 Articles:
 
@@ -177,10 +180,11 @@ Comm systems news:
 
 Highlights:
 
-* A [thread](https://www.reddit.com/r/decred/comments/95r578/proposed_changes_to_decred_jargon/) was started to discuss changes to Decred jargon with the intent to make it more consistent and accessible to newcomers. The question whether changing terminology on the website and the docs deserves a Politeia vote was touched in [#documentation](https://riot.im/app/#/room/!tfqymymiNgzSUJTHqS:decred.org/$1535386492135ZGULG:decred.org).
+* A [thread](https://www.reddit.com/r/decred/comments/95r578/proposed_changes_to_decred_jargon/) was started to discuss changes to Decred jargon with the intent to make it more consistent and accessible to newcomers. The question whether changing "official" terminology requires stakeholder approval was touched in [this thread](https://www.reddit.com/r/decred/comments/9807gs/new_governance_section_and_politeia_page_on/) and in [#documentation](https://riot.im/app/#/room/!tfqymymiNgzSUJTHqS:decred.org/$1535386492135ZGULG:decred.org).
 * Project fund transparency and constitution were extensively discussed on [Reddit](https://www.reddit.com/r/decred/comments/96j9ai/transparency_in_payments_made_with_the_community/) and in [#general](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153410896753432nExMw:decred.org).
+* [Pre-proposal](https://www.reddit.com/r/decred/comments/98lgwt/preproposal_the_first_politeia_proposalvote/) to use Politeia to approve Politeia as a legitimate decision-making tool for Decred.
 
-Reddit and Forum: Decred [cons](https://www.reddit.com/r/decred/comments/94ivq5/decred_cons/). {more}
+Reddit and Forum: substantive discussion about Decred [cons](https://www.reddit.com/r/decred/comments/94ivq5/decred_cons/); ecosystem [fund](https://www.reddit.com/r/decred/comments/953nwz/decred_ecosystem_fund_question/); a [thread](https://www.reddit.com/r/decred/comments/98fywg/decreds_politeia_and_amazing_autonomous_governance/) about voter engagement, Politeia UX and trolling; [idea](https://www.reddit.com/r/decred/comments/99jmoq/dcrsocial_a_plus_social_media_for_decred_project/) of a social media system for Decred by @michae2xl; [how profitable](https://www.reddit.com/r/decred/comments/9alvyz/is_it_even_worth_purchasing_the_dcr1_to_mine/) is the Obelisk DCR1.
 
 Chats: cross-chain [trading](https://riot.im/app/#/room/!MfifnUCLrfSeRkMDwZ:decred.org/$153315325947965TiRLy:decred.org) via LN; [plans](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153317267348142YycAs:decred.org) for contractor management system, lower-level decision making and contractor privacy vs transparency for stakeholders; [measuring](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153322272548457woVQD:decred.org) dev activity; [what if](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153323194548585HHCQS:decred.org) the network stalls, multiple implementations of Decred for more resilience, long term vision behind those extensive tests and accurate comments in the codebase; [ideas](https://riot.im/app/#/room/!tIDEIWechmqCLjPiui:decred.org/$153327969148851WDEWg:decred.org) for process for policy documents, hosting them in Pi and approving with ticket voting; [about](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$1533582725405DqzDt:zettaport.com) SPV wallet disk size, how compact filters work; [odds](https://riot.im/app/#/room/!NKtIRqGOEGaZvSQkKl:decred.org/$153378940451742eumld:decred.org) of a wallet to fetch a wrong block in SPV; new [module system](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153385446352375nNCzg:decred.org) in Go; [security](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153394851052869tucYe:decred.org) of allowing Android app backups; [why](https://riot.im/app/#/room/!NNzHoaSdnsbZDQOXJr:decred.org/$153409911653370oCvhJ:decred.org) PoW algo change proposal must be specified in great detail; [thoughts](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153432628255090APtWJ:decred.org) about [NIPoPoWs](https://eprint.iacr.org/2017/963) and SPV; [prerequisites](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153433879355141udYDe:decred.org) for shipping SPV by default ([continued](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$15356464972893wubQn:decred.org)); Decred vs Dash treasury and marketing [expenses](https://riot.im/app/#/room/!zxBsqZRxjbQoLqJRwe:decred.org/$153434282455193CVEFR:decred.org), spending other people's money; [why](https://riot.im/app/#/room/!NKtIRqGOEGaZvSQkKl:decred.org/$153453353055716yshds:decred.org) Decred should not invade a country, DAO and nation states, entangling with nation state is poor resource allocation; [how](https://riot.im/app/#/room/!wSdymYrEpBhsWlDJuk:decred.org/$153458242155930Qncyb:decred.org) winning tickets are determined and attack vectors; [Politeia](https://riot.im/app/#/room/!tIDEIWechmqCLjPiui:decred.org/$153455653755840KhCTV:decred.org) proposal moderation, contractor clearance, the scale of proposals and decision delegation, initial Politeia vote to approve Politeia itself; [chat systems](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153478648556684iKADS:decred.org), Matrix/Slack/Discord/RocketChat/Keybase ([continued](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$1535216745397gPsON:zettaport.com)); [overview](https://riot.im/app/#/room/!OfChXgczrIlpEZSFAv:decred.org/$153490307657191zOrLq:decred.org) of Korean exchanges; no [breaking changes](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153496073957423GaxvC:decred.org) in vgo; [why](https://riot.im/app/#/room/!VFRvyndKpzcLrVslQD:decred.org/$153496964357581puIAD:decred.org) project fund burn rate must keep low; [asymptotic](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153520054958429Jqwut:decred.org) behavior of Decred and other ccs, tail emission; count of [full nodes](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153529715258849rjuSm:decred.org) and incentives to run them; Politeia proposal [translations](https://riot.im/app/#/room/!VFRvyndKpzcLrVslQD:decred.org/$153535615958948fQNVf:decred.org) and multilingual environment.
 
